--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,9 +72,11 @@ figure{
     padding: 0;
     margin: 0;
 }
+
 body{
     font-family: 'Karla', sans-serif;
     padding: 0 !important;
+    width: 100%;
 }
 html {
   scroll-behavior: smooth;
@@ -2463,6 +2465,7 @@ img.sideimage {
 }
 .footer-one img.footer-logo {
     margin-bottom: 40px;
+    height: 40px;
 }
 .footer-one h2 {
     font-size: 28px;
