--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -41,7 +41,7 @@ ul.meta,
 .pd-cat-tags ul li ul.pd-tag li a:hover,
 .total-donation-amount .total_amount input,
 .pastor-meta p.designation{
-color: white;
+color: #003799;
 }
 
 blockquote,
