--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2353,6 +2353,10 @@ h1 {
     height: 450px;
     object-fit: cover;
 }
+
+#neweve{
+    color: #003799;
+}
 .event:hover img {
     transform: scale(1.1) rotate(1deg);
     -webkit-transform: scale(1.1) rotate(1deg);
